--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-cayman
 title: Welcome to my new crappy website!
 description: This might seriously evolve with time...
